# otus-task5

./: CMakeLists.txt  Doxyfile  annotated.html  class_controller-members.html  class_controller.html  class_controller__coll__graph.map  class_controller__coll__graph.md5  class_cout_graphics-members.html  class_cout_graphics.html  class_cout_graphics__coll__graph.map  class_cout_graphics__coll__graph.md5  class_document-members.html  class_document.html  class_document__coll__graph.map  class_document__coll__graph.md5  class_document__inherit__graph.map  class_document__inherit__graph.md5  class_model-members.html  class_model.html  class_model__coll__graph.map  class_model__coll__graph.md5  class_shape_base-members.html  class_shape_base.html  class_shape_base__coll__graph.map  class_shape_base__coll__graph.md5  class_shape_base__inherit__graph.map  class_shape_base__inherit__graph.md5  class_square-members.html  class_square.html  class_square__coll__graph.map  class_square__coll__graph.md5  class_square__inherit__graph.map  class_square__inherit__graph.md5  class_view-members.html  class_view.html  class_view__coll__graph.map  class_view__coll__graph.md5  class_view__inherit__graph.map  class_view__inherit__graph.md5  classes.html  (+140 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  (+21 more)
src/: CMakeLists.txt  controller.cpp  controller.h  document.cpp  document.h  idrawable.h  igraphics.h  iserializable.h  iview.h  main.cpp  model.cpp  model.h  q.txt  shapebase.cpp  shapebase.h  shapeid.cpp  shapeid.h  square.cpp  square.h
(+1 files in other folders)
